[bdist_wheel]
universal = 1

[metadata]
description-file = README.rst
license_files =
   LICENSE_GPL2.0.txt
   LICENSE_LGPL_2.1.txt

[flake8]
exclude = setup.py,docs/*,examples/*
max-line-length = 80
per-file-ignores =
    graphene_elastic/src/tests/test_mutation.py: F401, F811
    graphene_elastic/src/tests/test_query.py: F401, F811
    graphene_elastic/src/tests/test_relay_query.py: F401, F811
    graphene_elastic/src/tests/test_fields.py: F401, F811

[coverage:run]
omit = */tests/*
relative_files = True

[isort]
known_first_party=graphene,graphene_elastic

[aliases]
test=pytest

[tool:pytest]
python_files = graphene_elastic/src/tests/*.py
